Corrigindo problema de visualizacao de usuarios do gerente